[gd_scene load_steps=3 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 266.0
margin_top = 113.0
margin_right = 374.0
margin_bottom = 127.0
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
text = "Nightmare Lands"
align = 1
valign = 1

[node name="Start" type="Button" parent="."]
margin_left = 210.0
margin_top = 180.0
margin_right = 310.0
margin_bottom = 200.0
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
text = "PLAY"

[node name="Delete" type="Button" parent="."]
margin_left = 330.0
margin_top = 180.0
margin_right = 430.0
margin_bottom = 200.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "RESTART"

[node name="Quit" type="Button" parent="."]
margin_left = 270.0
margin_top = 210.0
margin_right = 370.0
margin_bottom = 230.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "QUIT"
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
